<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <EditText
                android:id="@+id/name_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/name_hint"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/mobile_no_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mobile" />

            <EditText
                android:id="@+id/mobile_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/mobile_hint"
                android:inputType="phone" />

            <TextView
                android:id="@+id/No_of_pax_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pax" />

            <EditText
                android:id="@+id/pax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/pax_hint"
                android:inputType="number" />

            <TextView
                android:id="@+id/date_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date" />

            <DatePicker
                android:id="@+id/datePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:datePickerMode="spinner" />

            <TextView
                android:id="@+id/time_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time" />

            <TimePicker
                android:id="@+id/timePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:timePickerMode="spinner" />

            <CheckBox
                android:id="@+id/checkBoxSmoke"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Smoking" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/Submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/submit" />

                <Button
                    android:id="@+id/Reset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/reset" />
            </LinearLayout>

            <TextView
                android:id="@+id/Output"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/Output2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
